--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: ruby
 rvm:
-  - 2.2
-script: "./start.sh"
+- 2.2
+script: bash ./start.sh
+env:
+  global:
+  - ENCRYPTION_LABEL: f996a0be0572
+  - COMMIT_AUTHOR_EMAIL: qnxu@travis.com
+before_install:
+- openssl aes-256-cbc -K $encrypted_f996a0be0572_key -iv $encrypted_f996a0be0572_iv
+  -in deploy_key.enc -out ~\/.ssh/deploy_key -d
